<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Adresat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Lidhu">Lidhu</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginTXT">Per tu kyqur ne databaze perdorni numrin tuaj personal, numrin e regjistrimit te biznesit ose numrin identifikues te institucionit.</string>
    <string name="Krijo">Nuk keni llogari?</string>
    <string name="KrijoLlogari"> Regjistrohu</string>
    <string name="RepeatPassword">Ri-shkruaj Password</string>
    <string name="Emri">Emri dhe Mbiemri:</string>
    <string name="Datelindja">Datelindja:</string>
    <string name="Vendlindja">Vendlindja:</string>
    <string name="Email">Email</string>
    <string name="KerkoAdrese">Kerko Adrese</string>
    <string name="RegjistroAdrese">Regjistro adresen tuaj</string>
    <string name="Logout">Dil</string>
    <string name="NdrroPassword">Nderro Fjalekalimin</string>
    <string name="NumriBlloku">Nr / Blloku</string>
    <string name="Rruga">Rruga</string>
    <string name="QytetiZip">Qyteti / Kodi Postar</string>
    <string name="azhuraharta">"Zgjedh permes"</string>
    <string name="hartes">"hartes? "</string>
    <string name="Ruaj">Ruaj</string>
    <string name="UsernameN">"Username: "</string>
    <string name="PasswordIvjeter">Passwordi aktual</string>
    <string name="PasswordiiRI">Passwordi i ri</string>
    <string name="RepeatNewPassword">Rishkruaj passwordin e ri</string>
    <string name="NdryshoEmail">"Email: "</string>
    <string name="NrPersonal">Nr Personal</string>
    <string name="Datelindjaa">Datelindja</string>
    <string name="Vendlindjaa">Vendlindja</string>
    <string name="Perdoruesi">Perdoruesi:</string>
    <string name="Adresa">Adresa:</string>
    <string name="qkapokerkon">Qka po kerkon?</string>
    <string name="Individ">Individ</string>
    <string name="Biznes">Biznes</string>
    <string name="Institucion">Institucion</string>

</resources>
