<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/btnNdrysho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/KrijoLlogari"
        android:onClick="regjistrohuClick" />

    <EditText
        android:id="@+id/editNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnNdrysho"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="84dp"
        android:ems="10"
        android:hint="@string/PasswordiiRI"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editNewPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editNewPassword"
        android:layout_alignTop="@+id/editNewPassword"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="@string/RepeatNewPassword"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editOldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editNewPassword"
        android:layout_alignLeft="@+id/editNewPassword"
        android:ems="10"
        android:hint="@string/PasswordIvjeter"
        android:inputType="textPassword"
		/>

    <TextView
        android:id="@+id/txtnUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtUsername"
        android:layout_toRightOf="@+id/txtUsername"
        android:textAppearance="?android:attr/textAppearanceMedium"
		/>

    <TextView
        android:id="@+id/txtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtn2"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="18dp"
        android:text="@string/Emri" />

    <TextView
        android:id="@+id/txtn11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtn1"
        android:layout_alignBottom="@+id/txtn1"
        android:layout_toRightOf="@+id/txtn3"
        android:textAppearance="?android:attr/textAppearanceMedium"
         />

    <TextView
        android:id="@+id/txtnError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editNewPassword2"
        android:layout_below="@+id/editNewPassword2"
        android:textColor="#FF0000"
       />

    <TextView
        android:id="@+id/txtn22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtn2"
        android:layout_toRightOf="@+id/txtn3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:id="@+id/txtn33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtn3"
        android:layout_toRightOf="@+id/txtn3"
        android:textAppearance="?android:attr/textAppearanceMedium"
         />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtn1"
        android:layout_alignRight="@+id/txtn1"
        android:layout_marginBottom="15dp"
        android:text="@string/UsernameN" />

    <TextView
        android:id="@+id/txtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtEmail"
        android:layout_alignLeft="@+id/txtUsername"
        android:layout_marginBottom="22dp"
        android:text="@string/Vendlindja" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editOldPassword"
        android:layout_alignRight="@+id/txtn2"
        android:layout_marginBottom="21dp"
        android:text="@string/NdryshoEmail" />

    <TextView
        android:id="@+id/txtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtn3"
        android:layout_alignRight="@+id/txtn1"
        android:layout_marginBottom="18dp"
        android:text="@string/Datelindja" />

    <ProgressBar
        android:id="@+id/progressNdryshoo"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtn3"
        android:layout_alignRight="@+id/editOldPassword"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtnEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtEmail"
        android:layout_alignBottom="@+id/txtEmail"
        android:layout_toRightOf="@+id/txtn3"
        />

</RelativeLayout>