<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/btnRegistrohu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/KrijoLlogari"
        android:onClick="regjistrohuClick" />

    <EditText
        android:id="@+id/editcUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spLloji"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="number" />

    <TextView
        android:id="@+id/txt33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt22"
        android:layout_alignRight="@+id/txt22"
        android:layout_alignTop="@+id/txt3"
        android:layout_marginBottom="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spLloji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/txt11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/txt1"
        android:layout_marginBottom="15dp"
        android:layout_toRightOf="@+id/txt1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editEmail"
    	android:inputType="textEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editcPassword2"
        android:layout_alignRight="@+id/editcPassword2"
        android:layout_below="@+id/editcPassword2"
        android:ems="10"
        android:hint="@string/Email" />

    <EditText
        android:id="@+id/editcPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editcUsername"
        android:layout_below="@+id/txt33"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editcPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editcPassword"
        android:layout_below="@+id/editcPassword"
        android:ems="10"
        android:hint="@string/RepeatPassword"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/txtMesazhi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt2"
        android:layout_below="@+id/editEmail"
        android:textColor="#FF0000" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editcUsername"
        android:layout_marginTop="14dp"
        android:text="@string/Emri" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txt3"
        android:layout_below="@+id/txt11"
        android:text="@string/Datelindja" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txt1"
        android:layout_below="@+id/txt22"
        android:text="@string/Vendlindja" />

    <TextView
        android:id="@+id/txt22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt11"
        android:layout_alignTop="@+id/txt2"
        android:layout_marginBottom="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt33"
        android:layout_alignRight="@+id/txt11"
        android:layout_alignTop="@+id/txt22"
        android:layout_toRightOf="@+id/txt33"
        android:visibility="gone" />

</RelativeLayout>