<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >



    <ImageView
        android:id="@+id/imgStatic"
        android:contentDescription="@string/Emri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/adressat" />

    <Button
        android:id="@+id/btnKerko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imgStatic"
        android:layout_alignRight="@+id/imgStatic"
        android:layout_below="@+id/imgStatic"
        android:text="@string/KerkoAdrese" />

    <Button
        android:id="@+id/btnShto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnKerko"
        android:layout_alignRight="@+id/btnKerko"
        android:layout_below="@+id/btnKerko"
        android:layout_marginBottom="15dp"
        android:text="@string/RegjistroAdrese" />

    <ImageView
        android:id="@+id/imgProfile"
        android:contentDescription="@string/Emri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnShto"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:src="@drawable/individ" />

    <TextView
        android:id="@+id/txtb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnShto"
        android:layout_alignTop="@+id/txtb11"
        android:text="@string/Emri"
        />

    <TextView
        android:id="@+id/txtb22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtb11"
        android:layout_alignTop="@+id/txtb2"
        android:layout_marginBottom="15dp"
        android:text="23/04/1993"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txtb1"
        android:layout_below="@+id/txtb11"
        android:layout_marginTop="16dp"
        android:text="@string/Datelindja"
	/>

    <TextView
        android:id="@+id/txtb11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgProfile"
        android:layout_toRightOf="@+id/txtb3"
        android:text="Lavdrim Shala"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtb33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtb22"
        android:layout_alignTop="@+id/txtb3"
        android:text="Prishtine"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txtb2"
        android:layout_below="@+id/txtb22"
        android:text="@string/Vendlindja" />

</RelativeLayout>